<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
 >
 <include 
     layout="@layout/personaltitle"
     android:id="@+id/tixian_back_titles"
     />
 <ScrollView 
      android:layout_below="@id/tixian_back_titles"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" 
        
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_weight="5"
            android:text="@string/ketixianmoney"
            android:textColor="#333333"
            android:gravity="center|right"
            android:paddingRight="3dip"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/allowed_money"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_weight="2"
              android:gravity="center|left"
              android:text="0.00元"
             android:textColor="#333333"
             android:paddingLeft="5dip"
            android:textSize="16sp"
            />
    </LinearLayout>

    <LinearLayout
         android:layout_marginTop="15dip"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_weight="5"
            android:text="@string/apptixian_money"
            android:textColor="#333333"
             android:paddingRight="3dip"
             android:gravity="center|right"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/apptixian_money"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_weight="2"
            android:gravity="center|left"
            android:paddingLeft="6dip"
            android:textSize="16sp"
            android:background="@drawable/tixian_bg"
         />
    </LinearLayout>

    <LinearLayout
         android:layout_marginTop="15dip"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_weight="5"
            android:text="@string/zhifubao_id"
            android:textColor="#333333"
             android:paddingRight="3dip"
             android:gravity="center|right"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/zhifubao_id"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_weight="2"
            android:gravity="center|left"
            android:paddingLeft="6dip"
            android:textSize="16sp"
            android:background="@drawable/tixian_bg"
            />
    </LinearLayout>
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal"
        android:layout_marginTop="15dip"
         >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_weight="5"
            android:text="@string/tixian_name"
            android:textColor="#333333"
             android:gravity="center|right"
              android:paddingRight="3dip"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/tixian_name"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_weight="2"
            android:background="@drawable/tixian_bg"
            android:ems="10"
            android:paddingLeft="6dip"
            android:textSize="16sp"
            android:gravity="center|left" >

        
        </EditText>

    </LinearLayout>
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal"
        android:layout_marginTop="15dip"
         >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_weight="5"
             android:paddingRight="3dip"
            android:text="@string/phone"
             android:gravity="center|right"
            android:textColor="#333333"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/tisnxian_phone"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_weight="2"
             android:gravity="center|left"
             android:paddingLeft="6dip"
            android:textSize="16sp"
             android:background="@drawable/tixian_bg"
          />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal"
        android:layout_marginTop="15dip"
         >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_weight="5"
            android:text="@string/loginpassword"
             android:paddingRight="3dip"
            android:textColor="#333333"
             android:gravity="center|right"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/tixian_loginpassword"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
             android:gravity="center|left"
             android:inputType="textPassword"
             android:background="@drawable/tixian_bg"
             android:paddingLeft="6dip"
            android:textSize="16sp"
            android:layout_weight="2"
            />
    </LinearLayout>

    <Button 
            android:id="@+id/immediately_tixian"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dip"
            android:paddingBottom="12dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dip"
            android:layout_marginBottom="25dip"
             android:text="@string/immediately_tixian"
            android:textColor="@color/black"
            android:background="@drawable/inform_button"/>

</LinearLayout>
</ScrollView>
</RelativeLayout>