<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/pink_grey"
    >
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
<RelativeLayout 
    android:id="@+id/login_page_buttom"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     >
     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginLeft="5dip"
         android:layout_marginRight="5dip"
         android:orientation="vertical"
         >
    <ImageView 
        android:id="@+id/login_page_nomean_biglogo"
        android:layout_width="180dip"
        android:layout_height="65dip"
        android:layout_marginTop="50dip"
        android:layout_marginLeft="15dip"
        android:src="@drawable/logo_2"/>
    
    <TextView 
        android:id="@+id/login_page_nomean_welcomelogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="15dip"
        android:text="@string/welcome_login"/>
    
    

    <EditText 
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:singleLine="true"
        android:drawableLeft="@drawable/yonghu"
        android:paddingLeft="12dip"
        android:drawablePadding="12dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="35dip"
        android:layout_marginTop="22dip"
        android:hint="用户名/邮箱/手机号"
        style="@style/my_edittext_style"
       />
    
    <EditText 
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:drawableLeft="@drawable/mima"
        android:hint="点击输入密码"
        android:paddingLeft="12dip"
        android:paddingRight="8dip"
        android:drawablePadding="12dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="35dip"
        android:layout_marginTop="10dip"
        style="@style/my_edittext_style"
        android:inputType="textPassword"
       />
    
    
    <LinearLayout 
        android:clickable="true"
        android:id="@+id/remenberUserLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dip"
        android:paddingBottom="12dip"
        android:paddingLeft="15dip"
        android:orientation="horizontal">
    <ImageView 
        android:clickable="true"
        android:id="@+id/remenberUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/remenbered"
        />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginLeft="8dip"
       android:layout_marginTop="3dip"
       android:text="@string/remenberUser"
       android:textColor="@color/remenberUser"
        />
    
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/login_page_nomean_loginlayout"
         android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="35dip"
        android:gravity="center"
        android:orientation="horizontal">
 
    <Button 
        android:id="@+id/login_to_cosji_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:text="登  录"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/black"/>
    
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/login_page_nomean_registerlayout"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:layout_marginLeft="15dip"
        android:orientation="horizontal">
 
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="@string/meiyouzhanghao"
        />
    <TextView 
        android:id="@+id/login_page_register"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="@string/register"
       android:textColor="@color/remenberUser"
        />
    
    </LinearLayout>
    
    <LinearLayout 
         android:id="@+id/login_page_nomean_forgetmimalayout"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="15dip"
        android:orientation="horizontal">
 
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="@string/wangjimima"
        />
    <TextView 
        android:id="@+id/forgetmima"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="@string/lookformima"
       android:textColor="@color/remenberUser"
        />
    </LinearLayout>
      </LinearLayout>
 
            
        <LinearLayout 
            android:id="@+id/login_page_inLoginlayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:background="@color/fourtyper_black"
            android:keepScreenOn="true"
            android:orientation="vertical"
            android:visibility="gone">

            <include layout="@layout/loading_dialog"/>
        </LinearLayout>
</RelativeLayout>
</ScrollView>
</LinearLayout>