<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical" >
    
    <include layout="@layout/personaltitle"/>
    
    <LinearLayout 
       android:layout_marginTop="6dip"
       android:layout_width="fill_parent"
       android:layout_marginLeft="9dip"
       android:layout_marginRight="9dip"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_weight="7"
        >
        
        <ImageView 
             android:id="@+id/detial_image"
             android:layout_width="fill_parent"
             android:layout_height="300dip"
             android:layout_marginLeft="15dip"
             android:layout_marginRight="15dip"
             android:src="@drawable/detils_defulte"
            />
        <TextView 
            android:id="@+id/detial_introdutice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="9dip"
        android:layout_marginRight="9dip"
        android:layout_weight="3"
        android:orientation="vertical">
        
            <RelativeLayout 
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">
                
                <TextView 
                    android:layout_marginTop="3dip"
                    android:id="@+id/old_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#575757"
                    android:text="@string/old_price"/>
                
                <TextView 
                    android:layout_marginTop="3dip"
                    android:id="@+id/old_price_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/old_price"
                    android:textSize="15sp"
                    android:textColor="#E43D3F"
                    android:text="@string/old_price_number"/>
                
                <TextView 
                    android:layout_marginTop="3.5dip"
                    android:layout_below="@id/old_price"
                    android:id="@+id/fanli_wenzi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#575757"
                    android:paddingBottom="8dip"
                    android:text="@string/fanli_wenzi"/>
                
                <ImageView 
                    android:layout_toRightOf="@id/fanli_wenzi"
                    android:layout_alignBottom="@id/fanli_wenzi"
                    android:id="@+id/fanli_image"
                    android:layout_marginBottom="8.6dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rebate_no"
                    
                    />
                
                <Button 
                    android:layout_marginTop="3dip"
                    android:id="@+id/goto_shopping_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/goto_shopping_now"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:paddingLeft="12dip"
                    android:paddingRight="12dip"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:text="@string/goto_shopping_now"/>
                

                </RelativeLayout>
                
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3">
            <ImageView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/deitals_warm"/>
            <TextView 
                android:layout_marginTop="5dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#575757"
                android:text="温馨提示"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="@string/wenxingtishi"/>
        </LinearLayout>
        </LinearLayout>
</LinearLayout>
</ScrollView>