<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" 
    android:background="@color/white_gery"
    >
<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_setting"
        android:orientation="vertical"
        android:layout_marginLeft="15dip"
		android:layout_marginRight="15dip"
		android:layout_marginTop="12dip">
		    <LinearLayout
		        android:id="@+id/rebate_indent"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		       android:layout_marginTop="1dip"
		        android:layout_marginRight="1dip"
		        android:layout_marginLeft="1dip"
		        android:clickable="true"
		        android:background="@drawable/pressed_color"
		        android:orientation="horizontal"
		        android:paddingBottom="9dip"
		        android:paddingTop="9dip" >
		
		        <ImageView
		            android:layout_width="23dip"
		            android:layout_height="23dip"
		            android:layout_gravity="center_vertical"
		            android:layout_marginLeft="10dip"
		            android:src="@drawable/tubiao_dingdan" />
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:layout_marginLeft="10dip"
		            android:text="@string/rebate_indent"
		            android:textSize="15sp" />
		
		        <TextView
		            android:id="@+id/rebate_number"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:layout_marginLeft="120dip"
		            android:textColor="@color/orange_secend"
		            android:textSize="13sp" />
		    </LinearLayout>
		 <!--       <View 
		        android:layout_width="fill_parent"
		        android:layout_height="1px"
		        android:background="@color/white_gery"/>
		   <LinearLayout
		        android:id="@+id/referrd_bonuses"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="1dip"
		        android:layout_marginRight="1dip"
		        android:clickable="true"
		         android:background="@drawable/pressed_color"
		        android:orientation="horizontal"
		        android:paddingBottom="9dip"
		        android:paddingTop="9dip" >
		
		        <ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:layout_marginLeft="10dip"
		            android:src="@drawable/tubiao_tuijianhaoyou" />
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:layout_marginLeft="10dip"
		            android:text="@string/referrd_bonuses"
		            android:textSize="15sp" />
		    </LinearLayout>-->
		    <!-- 账户明细 -->
		    <View 
		        android:layout_width="fill_parent"
		        android:layout_height="1px"
		        android:background="@color/white_gery"/>
		      <LinearLayout
		        android:id="@+id/acount_detils"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="1dip"
		        android:layout_marginRight="1dip"
		         android:background="@drawable/pressed_color"
		        android:clickable="true"
		        android:orientation="horizontal"
		        android:paddingBottom="9dip"
		        android:paddingTop="9dip" >
		
		        <ImageView
		            android:layout_width="23dip"
		            android:layout_height="23dip"
		            android:layout_gravity="center_vertical"
		            android:layout_marginLeft="10dip"
		            android:src="@drawable/tubiao_zhanghu" />
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:layout_marginLeft="10dip"
		            android:text="@string/acount_detils"
		            android:textSize="15sp" />
		
		    </LinearLayout>
		    <!-- 站内信息 -->
		     <View 
		        android:layout_width="fill_parent"
		        android:layout_height="1px"
		        android:background="@color/white_gery"/>
		       <LinearLayout
		        android:id="@+id/inner_message"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="1dip"
		        android:layout_marginRight="1dip"
		         android:background="@drawable/pressed_color"
		        android:clickable="true"
		        android:orientation="horizontal"
		        android:paddingBottom="9dip"
		        android:paddingTop="9dip" >
		
		        <ImageView
		            android:layout_width="23dip"
		            android:layout_height="23dip"
		            android:layout_gravity="center_vertical"
		            android:layout_marginLeft="10dip"
		            android:src="@drawable/tubiao_tuijianhaoyou" />
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:layout_marginLeft="10dip"
		            android:text="@string/inner_message"
		            android:textSize="15sp" />
		
		        <!-- 
		        <TextView
		            android:id="@+id/inner_message_num"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:layout_marginLeft="120dip"
		            android:text=""
		            android:textColor="@color/orange_secend"
		            android:textSize="13sp" />
		             -->
		    </LinearLayout>
		    
		       <View 
		        android:layout_width="fill_parent"
		        android:layout_height="1px"
		        android:background="@color/white_gery"/>
		      <LinearLayout
		        android:id="@+id/acount_setting"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="1dip"
		        android:layout_marginRight="1dip"
		        android:layout_marginBottom="1dip"
		         android:background="@drawable/pressed_color"
		        android:clickable="true"
		        android:orientation="horizontal"
		        android:paddingBottom="9dip"
		        android:paddingTop="9dip" >
		
		        <ImageView
		            android:layout_width="23dip"
		            android:layout_height="23dip"
		            android:layout_gravity="center_vertical"
		            android:layout_marginLeft="10dip"
		            android:src="@drawable/tubiao_shezhi" />
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:layout_marginLeft="10dip"
		            android:text="@string/acount_setting"
		            android:textSize="15sp" />
		
		    </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>